CHANGELOG
Note : this project started in October 2016.
Many improvements have been done since this date until August 2018.
Then the project has been refreshed in March 2019 with major modifications, in a more pythonic way.

15/02/2020
    Change in readme.md
        Add parameter --hiddenimport win32timezone in pyinstaller compilation instruction
    New demo GIF

07/02/2020 - 09/02/2020
    Modules static analysis (# pylint3 --disable=line-too-long) + code cleaning and minor corrections
        main.py             9.71/10
        scans.py            9.69/10
        writer.py           10/10
        verif.py            9.61/10
        software_scan.py    9.73/10
        complement.py       9.72/10
    Mod security_product_info() from scans.py
        Same code had been identify 3 times : put in a new function security_product_get()
    Rename modules, functions, variables, etc. according PEP8 convention
    Merge av_date.py with complement.py
    Merge ask_dismount.py with verif.py
    Remove _rowheader() from writer.py
        Headers will be write with _row2tr
    Rename write() to writer()

27/07/2019
    Legacy update.
    scans.py module updated to work on Windows XP x86
    Functions patched:
        servicesInfo()
        securityProductInfo()
        systemInfo()

20/05/2019 - 24/05/2019
    software_scan module will try to find version number in software name if no version has been found in regedit
    complement module now shows results in an HTML table (thanks to a CSV file)
    Two new functions in scans module
        securityProductInfo() and securityProductState() which find informations about security products
            Antivirus
            FireWall
            AntiSpyware
    Improve visibility of the titles in the HTML report (thanks to <h2> tags)

13/05/2019 - 18/05/2019
    CSS is now define in style.css file
    software_scan module now shows if the software are up to date with sotware_list.json
        ok in green if up to date